# drop2md

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  TODO.md  config.toml.example  drop2md.spec  pdf_to_markdown.py  pyproject.toml  pytest.ini
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  release.yml
docs/: PRD.md  ROADMAP.md  comparison.md  mcp_integration.md  testing.md
launchd/: com.thomasdyhr.doc2md.plist.template  com.thomasdyhr.drop2md.plist.template
scripts/: build_macos.sh  entitlements.plist  install.sh  uninstall.sh
scripts/pyinstaller_hooks/: hook-magic.py  rthook_magic.py
services/: Info.plist.template  document.wflow.template
src/doc2md/: __init__.py  cli.py  config.py  dispatcher.py  enhance.py  enhance_providers.py  mcp_server.py  ollama_enhance.py  postprocess.py  watcher.py
src/doc2md/converters/: __init__.py  epub.py  html.py  image.py  legacy_pdf.py  office.py  pdf.py
src/doc2md/utils/: fs.py  gfm.py  logging.py
src/drop2md/: __init__.py  cli.py  config.py  dispatcher.py  enhance.py  enhance_providers.py  mcp_server.py  ollama_enhance.py  postprocess.py  watcher.py
src/drop2md/converters/: epub.py  html.py  image.py  legacy_pdf.py  office.py  pdf.py
src/drop2md/services/: document.wflow.template
src/drop2md/utils/: gfm.py  image_extractor.py  logging.py  process_monitor.py
tests/: conftest.py
tests/fixtures/: sample.docx  sample.html
tests/integration/: test_ollama_enhancement.py  test_vep_smoke.py
tests/unit/: test_cli.py  test_config.py  test_dispatcher.py  test_enhance.py  test_enhance_polish.py  test_enhance_providers.py  test_epub_converter.py  test_fs.py  test_gfm.py  test_image_converter.py  test_image_extractor.py  test_legacy_pdf.py  test_logging.py  test_mcp_server.py  test_office_converter.py  test_ollama_enhance.py  test_pdf_converter.py  test_postprocess.py  test_process_monitor.py  test_vep.py  test_watcher.py
